Clean layout - remove navigation header
- Custom minimal layout without theme navigation
- Professional clean appearance
- Just content, no distractions

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # GitHub Pages Configuration
 title: Sudoku Spark
 description: Privacy Policy and Terms of Service
-theme: minima
 markdown: kramdown
+
+# No theme - using custom minimal layout
